<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>DesignPatterns-Selenium</groupId>
	<artifactId>DesignPatterns-Selenium</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<selenium.java.version>4.16.0</selenium.java.version>
		<testng.version>7.9.0</testng.version>
		<webdriver.manager.version>5.6.3</webdriver.manager.version>
		<maven.compiler.version>3.11.0</maven.compiler.version>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.8.0</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.18.1</version>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<!--
			https://maven.apache.org/plugins/maven-compiler-plugin/examples/set-compiler-source-and-target.html -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>10</source>
					<target>10</target>
				</configuration>
			</plugin>

			<!--
			https://maven.apache.org/surefire/maven-surefire-plugin/examples/testng.html -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>src/test/resources/TestSuites/testng.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>